# todo-list-stripe

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  DEPLOY_NOW.md  FASTAPI_IMPLEMENTATION_SUMMARY.md  GIT_GUIDE.md  MIGRATION_COMPLETE.md  MIGRATION_GUIDE.md  README.md  SUBSCRIPTION_SETUP.md
fastapi-backend/: .env.example  .gitignore  API_DESIGN_IMPROVEMENTS.md  COMPARISON.md  Makefile  Procfile  README.md  alembic.ini  pyproject.toml  railway.json  requirements.txt  run.sh  todos.db.backup  todos.db.new_backup  vercel.json
fastapi-backend/alembic/: env.py
fastapi-backend/alembic/versions/: 97760c60d937_add_oauth_accounts_table.py  b611cc7fe154_add_subscription_fields_to_users.py
fastapi-backend/api/: index.py  test.py
fastapi-backend/scripts/: init_db.py
fastapi-backend/src/api_service/: __init__.py  main.py
fastapi-backend/src/api_service/api/: deps.py
fastapi-backend/src/api_service/api/v1/: router.py
fastapi-backend/src/api_service/api/v1/endpoints/: auth.py  google_auth.py  subscription.py  todo_lists.py  todos.py
fastapi-backend/src/api_service/core/: __init__.py  config.py  oauth.py  security.py
fastapi-backend/src/api_service/db/: __init__.py  base.py
fastapi-backend/src/api_service/models/: __init__.py  oauth.py  payment.py  todo.py  user.py
fastapi-backend/src/api_service/schemas/: __init__.py  payment.py  todo.py  user.py
fastapi-backend/src/api_service/services/: stripe_service.py  subscription.py  webhook_handlers.py
fastapi-backend/tests/: conftest.py
todo-app/: .env.example  package-lock.json  package.json  vercel.json
(+18 files in other folders)
